--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -22,7 +23,9 @@
 .App-link {
   color: #61dafb;
 }
-
+.DisplayLayout{
+  height: 100vh;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -30,4 +33,16 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.whiteDiv{
+  background-color: white;
+}
+
+.skillBox-wrapper{
+  z-index: 2;
+  margin : 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0px;
 }
