--- a/src/components/SkillBox/SkillBox.css
+++ b/src/components/SkillBox/SkillBox.css
@@ -1,7 +1,7 @@
 .skillBox-container {
     background-color: white;
     width: 100%;
-    padding: 2em 2em 2em 2em;
+    margin: 2em 2em 2em 2em;
     text-align: center;
     font-family: 'Crete Round', serif;
     border-radius: 15px;
@@ -30,7 +30,6 @@
     list-style-type: none;
     margin-left: 0;
     margin: 0;
-    padding: 0;
 }
 
 .is-hr-skillBox{
