--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -1,17 +1,16 @@
 .grid-container {
-  width: 70%;
+  max-width: 1200px;
+  padding: 5px 10px;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 5fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 25px;
   grid-gap: 20px;
-  height: 100%;
 }
 .NavContainer {
   position: fixed;
+  width:100%;
   top: 0;
   left: 0;
-  height: 3em;
   position: -webkit-sticky; /* Safari & IE */
   top: 0;
   z-index: 2;
@@ -25,10 +24,10 @@
   transition: all 0.5s ease-in;
 }
 .NavigationTabAnchor {
+  white-space: nowrap ;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
-  text-decoration: none;
   color: black;
 }
 .NavBarAnchorContainer {
@@ -36,10 +35,12 @@
 }
 .titles {
   font-family: "Crete Round", serif;
+  color: black;
 }
 
-a:link {
-  color: white;
+.NavBar a:link {
+  color: black;
+  text-decoration: none;
 }
 
 a:visited {
@@ -49,7 +50,47 @@ a:visited {
 a:hover {
   color: red;
 }
+.NavBarBurgerMenu, .navbarMobileInactive{
+  display:none;
+}
+.navbarMobileActive{
+  position: fixed;
+  height:100%;
+  width:100%;
+  background-color: black;
+  color: white;
+  font-size: 2em;
+  font-family: 'Abril Fatface', cursive;
+  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 1s; /* Firefox < 16 */
+   -ms-animation: fadein 1s; /* Internet Explorer */
+    -o-animation: fadein 1s; /* Opera < 12.1 */
+       animation: fadein 1s;
+       
 
+}
+.navbarMobileActive a:link {
+  color: white;
+  text-decoration: none;
+}
+
+@keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+from { opacity: 0; }
+to   { opacity: 1; }
+}
+.navMenuMobile{
+  top:50%;
+  transform: translateY(-50%);
+  width:100%;
+  text-align: center;
+  position: absolute;
+}
 @media screen and (max-width: 600px) {
   .NavBarAnchorContainer {
     display: none;
@@ -58,7 +99,17 @@ a:hover {
     display:block;
     text-align: right;
   }
+  .grid-container {
+    display: grid;
+    grid-template-columns: 11fr  1fr;
+    grid-gap: 10px;
+  }
 }
-.NavBarBurgerMenu {
-  display:block;
+.fa-times{
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  color: white;
+  font-size: 1em;
+
 }
