added about and experience components

--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -1,17 +1,30 @@
-.summary-container {
-    /* background-color: #8C43FF; */
-    background-color: #cbcbd3;
-    
+.experience-title {
+  text-align: center;
 }
-
-.summary-content {
-    /* color: #293347; */
-    color: white;
-    text-align: center;
-    font-family: 'Crete Round', serif;
+.experience-container {
+  max-width: 1200px;
 }
+.each-experience-content {
+  height: 400px;
+  width: 400px;
+  background-color: black;
+  margin: 0 auto;
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover;
+  border: 1px solid gray;
+}
+.caret {
+    border-left: solid 70px transparent; 
+    border-right: solid 70px transparent; 
+    border-bottom: solid 70px #fff;
+    filter: drop-shadow(0 0 30px #333);
 
-.is-hr-summary{
-    width:20%;
-    border-top: 1px solid white;
+  }
+.experiences-showcase-container {
+  display: grid;
+  grid-gap: 40px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  text-align: center;
+  padding: 20px;
 }
