--- a/src/components/LandingLayout/InformationLayout/InformationLayout.css
+++ b/src/components/LandingLayout/InformationLayout/InformationLayout.css
@@ -1,65 +1,132 @@
 .container {
-    text-align: center;
-    font-family: 'Crete Round', serif;
-    margin-top: 50px;
-    position: relative;
-    height: 95vh;
+  text-align: center;
+  margin-top: 50px;
+  position: relative;
+  height: 95vh;
 }
-.centeredContainer{
-    transform: translateY(-50%);
-    top: 50%;
-    position: relative;
+.centeredContainer {
+  transform: translateY(-50%);
+  top: 50%;
+  position: relative;
 }
 .title {
-    font-size: 70px;
-    color: white;
+  font-size: 70px;
+  color: white;
 }
 .description {
-    color: white;
-    font-size: 25px;
-}
-.description-Container {
+  color: white;
+  font-size: 25px;
 }
 .fa-chevron-down {
-    color: white;
+  color: white;
 }
-.bottomDiv{
+.bottomDiv {
     position: absolute;
-    bottom: 5px;;
-    left: 50%;
+    height: 30px;
+    width: 30px;
+    bottom: 5px;
+    left:50%;
+    transform: translate(-50%,-50%);
+    overflow: hidden;
 }
 
-hr { 
-    display: block;
-    width: 25%;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    margin-left: auto;
-    margin-right: auto;
-    border-style: inset;
-    border-width: 1px;
+
+.bottomDiv .fas {
+    font-size: 30px;
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    color: #fff;
+    transform: translate(-50%,-50%);
+    animation: animate 1.5s linear infinite;
+    text-shadow: 0 2px 5px rgba(0,0,0,.2);
+
+}
+@keyframes animate {
+    0%{
+        top: 0%;
+    }
+    40%{
+        top: 60%;
+    }
+    60%{
+        top: 30%;
+    }
+    80%{
+        top: 60%;
+    }
+    100%{
+        top: 100%;
+    }
+
+}
+hr {
+  display: block;
+  width: 25%;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 1px;
 }
 
 .socialContactsIcons {
-    width: 20%;
-    display: block;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    margin-left: auto;
-    margin-right: auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 25px;
-    grid-gap: 5px;
+  width: 20%;
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 5px;
 }
 .fab {
-    font-size: 40px;
+  font-size: 30px;
+  color: white;
+}
+@media screen and (max-width: 600px) {
+  .socialContactsIcons {
+    width: 50%;
+  }
+  .title {
+    font-size: 8vw;
+  }
+  .description {
+    font-size: 3.5vw;
+  }
+  .fab {
+    font-size: 30px;
     color: white;
+  }
 }
-.fab:hover {
-    color: red;
+.bg {
+  animation:slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, black 50%, rgb(203, 203, 211) 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.5;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:-1;
 }
-img {
-    height: 100px;
-    width: 100px;
+
+.bg2 {
+  animation-direction:alternate-reverse;
+  animation-duration:4s;
+}
+
+.bg3 {
+  animation-duration:5s;
+}
+@keyframes slide {
+  0% {
+    transform:translateX(-25%);
+  }
+  100% {
+    transform:translateX(25%);
+  }
 }
