--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,4 @@
 
-.App {
-  text-align: center;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
@@ -38,8 +34,10 @@
 
 .skillBox-wrapper{
   z-index: 2;
+  max-width: 1200px;
   margin : 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 0px;
 }
+
