--- a/src/components/SkillBox/SkillBox.css
+++ b/src/components/SkillBox/SkillBox.css
@@ -1,10 +1,8 @@
 .skillBox-container {
     background-color: white;
     width: 100%;
-    margin: 2em 2em 2em 2em;
     text-align: center;
-    font-family: 'Crete Round', serif;
-    border-radius: 15px;
+    border: 5px solid black;
 }
 
 .fa-mobile-alt {
