--- a/src/components/Summary/Summary.css
+++ b/src/components/Summary/Summary.css
@@ -1,17 +1,87 @@
 .summary-container {
-    /* background-color: #8C43FF; */
-    background-color: #cbcbd3;
-    
+  background-color: white;
+  padding: 40px 15px;
+  max-width: 1200px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
 }
 
 .summary-content {
-    /* color: #293347; */
-    color: white;
-    text-align: center;
-    font-family: 'Crete Round', serif;
+  padding: 0 15px;
 }
 
-.is-hr-summary{
-    width:20%;
-    border-top: 1px solid white;
+.summary-description {
+  text-align: left;
+  color: #484848;
+}
+.summary-title {
+  text-align: left;
+  color: #333333;
+}
+.about-list {
+  text-align: left;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.about-list-item {
+  margin: 0 0 10px 0;
+  color: #666666;
+}
+.about-list-item-fa {
+  margin: 0 5px 0 0;
+}
+.about-list-item-fa .fa {
+  margin: 0 5px 0 0;
+  color: black;
+}
+
+.skills-year-content {
+  padding: 0px 15px;
+}
+.progressBar {
+  border-radius: 15px;
+  background-color: #dfdfdf;
+  height: 6px;
+}
+.skill-percentage-visual {
+  border-radius: 15px;
+  background-color: #4f4f4f;
+  height: 100%;
+}
+.skill-info-content {
+  padding: 5px 0px;
+  font-size: 16px;
+  font-weight: bold;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.skill-name {
+  text-align: left;
+}
+.skill-year {
+  text-align: right;
+  padding-right: 5px;
+}
+
+.btn {
+    color: #31302B;
+    background: #FFF;
+    padding: 12px 17px;
+    border: 3px solid #31302B;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    display: inline-block;
+    text-align: center;
+    cursor: pointer;
+    box-shadow: inset 0 0 0 0 #31302B;
+	-webkit-transition: all ease 1.2s;
+	-moz-transition: all ease 1.2s;
+    transition: all ease 1.2s;
+}
+.btn:hover {
+    box-shadow: inset 200px 0 0 0 #e0e0e0;
+    color: #fff;
 }
