--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -3,28 +3,47 @@
 }
 .experience-container {
   max-width: 1200px;
+  margin: 0 auto;
 }
 .each-experience-content {
-  height: 400px;
-  width: 400px;
-  background-color: black;
+  height: 200px;
+  width: 200px;
+  background-color: white;
   margin: 0 auto;
+  
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover;
-  border: 1px solid gray;
+  border-radius: 8px;
+  box-shadow: 10px 10px 10px 10px rgba(0,0,0,.1);
 }
-.caret {
-    border-left: solid 70px transparent; 
-    border-right: solid 70px transparent; 
-    border-bottom: solid 70px #fff;
-    filter: drop-shadow(0 0 30px #333);
-
-  }
 .experiences-showcase-container {
   display: grid;
   grid-gap: 40px;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   text-align: center;
   padding: 20px;
+}
+.each-experience-content-over-background{
+pointer-events: none;
+padding: 12px;
+width: -webkit-calc(100% - 16px);
+width: -moz-calc(100% - 16px);
+width: calc(100% - 16px);
+height: -webkit-calc(100% - 16px);
+height: -moz-calc(100% - 16px);
+height: calc(100% - 16px);
+top: 8px;
+left: 8px;
+background-color: rgba(0, 0, 0, 0.8);
+}
+
+.effect {
+  -webkit-transition: all .4s ease-in-out;
+  -moz-transition: all .4s ease-in-out;
+  -o-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+.gone{
+  display: none;
 }
