--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -24,7 +24,7 @@
     width: 100%;
 }
 .message-input{
-    border: 1.5px solid black;
+    border: 1px solid #ddd;
     /* border-radius: 4px; */
     height: 100%;
     width: 100%;
