--- a/src/components/Experience-item/Experience-item.css
+++ b/src/components/Experience-item/Experience-item.css
@@ -1,10 +1,15 @@
 .experience-item-content {
+    display: grid;
+    grid-template-columns:  repeat(auto-fit, minmax(250px, 1fr));
+    padding: 10px;
+    grid-column-gap: 10px;
     margin: 0 auto;
     text-align: left;
 }
 
 .experience-item-container {
     box-shadow: 5px 5px 5px 5px rgba(0,0,0,.1);
+    max-width: 1000px;
     border-radius: 5px;
 }
 
@@ -15,6 +20,11 @@
     transform: translateY(-50%);
     max-width: 200px;
     max-width: 200px;
+}
+
+.experience-item-description{
+    grid-column: auto / span 2;
+
 }
 
 .experience-item-image2{
