--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -4,7 +4,7 @@
 }
 
 .experience-item-container {
-    box-shadow: 5px 5px 5px 5px rgba(0,0,0,.1);
+    box-shadow: 0px 10px 20px 4px #00000015;
     border-radius: 5px;
 }
 
