--- a/src/components/Experience-item/Experience-item.css
+++ b/src/components/Experience-item/Experience-item.css
@@ -8,8 +8,8 @@
 }
 
 .experience-item-container {
-    box-shadow: 5px 5px 5px 5px rgba(0,0,0,.1);
-    max-width: 1000px;
+    box-shadow: 0px 10px 20px 4px #00000015;
+    max-width: 1200px;
     border-radius: 5px;
 }
 
@@ -24,6 +24,7 @@
 
 .experience-item-description{
     grid-column: auto / span 2;
+    padding: 40px;
 
 }
 
