--- a/src/components/Recommendation/Recommendation.css
+++ b/src/components/Recommendation/Recommendation.css
@@ -1,5 +1,6 @@
 .circle-avatar{
     border-radius: 50%;
+    border: 5px solid #0bceaf;
     max-width: 100px;
     max-height: 100px;
 }
@@ -9,7 +10,7 @@
     max-height: 450px;
     margin: 0 auto;
     text-align: center;
-    box-shadow: 3px 3px 3px 3px rgba(0,0,0,.1);
+    box-shadow: 0px 10px 20px 4px #00000015;
 
 }
 
