added eduation, project and quote components

--- a/src/components/Experience/Experience-list.css
+++ b/src/components/Experience/Experience-list.css
@@ -4,6 +4,7 @@
 .experience-container {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 100px 0px;
 }
 .experience-content {
   margin: 100px 25px;
