--- a/src/components/Education/EducationBox/EducationBox.css
+++ b/src/components/Education/EducationBox/EducationBox.css
@@ -1,20 +1,3 @@
-.education-content{
-    max-width: 1200px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-column-gap: 20px;
-    grid-row-gap: 100px;
-    margin: 0 auto;
-    padding: 100px 30px;
-}
-.education-item-container{
-    
-    max-width: 1200px;
-    margin: 0 auto;
-    text-align: left;
-    padding: 100px 0px;
-}
-
 .education-box{
     padding: 26px 30px;
     box-shadow: 0px 10px 20px 4px #00000015;
@@ -32,8 +15,24 @@
 }
 .uniicon{
     margin: 0 auto;
+    width:100%;
     text-align: center;
 }
 .fa-adobe{
     color: black
+}
+.a {
+    text-decoration: none;
+}
+
+.school-responsibility {
+    padding: 0;
+    list-style-type: none;
+}
+.school-responsibility li{
+    margin: 0 0 6px 0;
+}
+.italic-li{
+    font-style: italic;
+
 }
