--- a/src/components/LandingLayout/InformationLayout/InformationLayout.css
+++ b/src/components/LandingLayout/InformationLayout/InformationLayout.css
@@ -3,11 +3,16 @@
   margin-top: 50px;
   position: relative;
   height: 95vh;
+  background: rgba(0, 0, 0, 0.7);
 }
 .centeredContainer {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
   transform: translateY(-50%);
   top: 50%;
-  position: relative;
 }
 .title {
   font-size: 70px;
@@ -38,7 +43,6 @@
     left:50%;
     transform: translate(-50%,-50%);
     color: #fff;
-    transform: translate(-50%,-50%);
     animation: animate 1.5s linear infinite;
     text-shadow: 0 2px 5px rgba(0,0,0,.2);
 
@@ -102,31 +106,13 @@ hr {
     color: white;
   }
 }
-.bg {
-  animation:slide 3s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, black 50%, rgb(203, 203, 211) 50%);
-  bottom:0;
-  left:-50%;
-  opacity:.5;
-  position:fixed;
-  right:-50%;
-  top:0;
-  z-index:-1;
-}
+.overlay{
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    top: 0px;
+    left: 0px;
+    background: rgba(0, 0, 0, 0.7); /*can be anything, of course*/
 
-.bg2 {
-  animation-direction:alternate-reverse;
-  animation-duration:4s;
-}
-
-.bg3 {
-  animation-duration:5s;
-}
-@keyframes slide {
-  0% {
-    transform:translateX(-25%);
-  }
-  100% {
-    transform:translateX(25%);
-  }
 }
