--- a/src/components/Summary/Summary.css
+++ b/src/components/Summary/Summary.css
@@ -65,28 +65,46 @@
   padding-right: 5px;
 }
 
-.btn {
-    color: #31302B;
-    background: #FFF;
-    padding: 12px 17px;
-    border: 3px solid #31302B;
-    font-size: 14px;
-    font-weight: bold;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    display: inline-block;
-    text-align: center;
-    cursor: pointer;
-    box-shadow: inset 0 0 0 0 #31302B;
-	-webkit-transition: all ease 1.2s;
-	-moz-transition: all ease 1.2s;
-    transition: all ease 1.2s;
+.anchorNoStyle span{
+  position: relative;
+  z-index: 2;
 }
-.btn:hover {
-    box-shadow: inset 200px 0 0 0 #e0e0e0;
-    color: #fff;
+
+.anchorNoStyle:after{
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #959492;
+  transition: all .75s;
 }
+
+.anchorNoStyle:hover{
+  color: #fff;
+}
+
+.anchorNoStyle:hover:after{
+  width: 100%;
+}
+
 .anchorNoStyle{
-  color: inherit;
+  display: block;
+  width: 200px;
+  height: 20px;
+  line-height: 20px;
+  font-size: 14px;
+  font-weight: bold;
   text-decoration: none;
+  color: #31302B;
+  border: 3px solid #31302B;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-align: center;
+  position: relative;
+  transition: all .35s;
+  padding: 12px 17px;
+  box-shadow: inset 0 0 0 0 #31302B;
+  display: inline-block;
 }
