--- a/src/components/Summary/Summary.css
+++ b/src/components/Summary/Summary.css
@@ -12,8 +12,9 @@
 }
 
 .summary-description {
-  text-align: left;
   color: #484848;
+  text-align: justify;
+  text-justify: inter-word;
 }
 .summary-title {
   text-align: left;
@@ -47,7 +48,7 @@
 }
 .skill-percentage-visual {
   border-radius: 15px;
-  background-color: #4f4f4f;
+  background-color: #191849;
   height: 100%;
 }
 .skill-info-content {
@@ -77,7 +78,7 @@
   left: 0;
   width: 0;
   height: 100%;
-  background: #959492;
+  background: #191849;
   transition: all .75s;
 }
 
