fix recommendation text, quote, nav bar and more

--- a/src/components/LandingLayout/InformationLayout/InformationLayout.css
+++ b/src/components/LandingLayout/InformationLayout/InformationLayout.css
@@ -90,6 +90,10 @@ hr {
   font-size: 30px;
   color: white;
 }
+
+.socialContactsIcons a .fab:hover{
+  color: #191849;
+}
 @media screen and (max-width: 600px) {
   .socialContactsIcons {
     width: 50%;
