--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -20,7 +20,7 @@
 }
 
 .message-input-container{
-    height:300px;
+    height:200px;
     width: 100%;
 }
 .message-input{
@@ -43,4 +43,10 @@
         margin : 0 auto;
         padding : 30px 30px;
     }
+  }
+  .smallBtn{
+      margin-top: 10px;
+      width:50%;
+      border: 1px solid #ddd;
+
   }
