--- a/src/components/Recommendation/Recommendation.css
+++ b/src/components/Recommendation/Recommendation.css
@@ -7,17 +7,17 @@
 .recommendation-container{
     padding: 20px;
     max-width: 300px;
-    max-height: 450px;
+    height: auto;    /* auto keyword */
     margin: 0 auto;
     text-align: center;
     box-shadow: 0px 10px 20px 4px #00000015;
+    color: black;
 
 }
 
 .recommendation-content{
     margin: 0 auto;
     height: 100%;
-    padding: 10px;
 }
 .recommendation-paragraph {
     text-align: center;
@@ -26,4 +26,37 @@
 .recommendation-information{
     position: relative;
     bottom: 0;
+}
+
+blockquote {
+    font-family: Georgia, serif;
+    font-size: 12px;
+    font-style: italic;
+    margin: 0.25em 0;
+    padding: 0.35em 40px;
+    line-height: 1.45;
+    position: relative;
+    color: #383838;
+}
+
+blockquote:before {
+    display: block;
+    padding-left: 10px;
+    content: "\201C";
+    font-size: 80px;
+    position: absolute;
+    left: -20px;
+    top: -20px;
+    color: #7a7a7a;
+}
+
+blockquote cite {
+    color: #999999;
+    font-size: 12px;
+    display: block;
+    margin-top: 5px;
+}
+
+blockquote cite:before {
+    content: "\2014 \2009";
 }
