fixed links in navBar & resume

--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -5,14 +5,14 @@
     grid-column-gap: 20px;
     grid-row-gap: 100px;
     margin: 0 auto;
-    padding: 100px 30px;
+    padding: 50px 30px;
 }
 .education-item-container{
     
     max-width: 1200px;
     margin: 0 auto;
     text-align: left;
-    padding: 100px 0px;
+    padding-top: 100px;
 }
 
 .education-box{
