--- a/src/components/LandingLayout/InformationLayout/InformationLayout.css
+++ b/src/components/LandingLayout/InformationLayout/InformationLayout.css
@@ -83,7 +83,7 @@ hr {
   margin-left: auto;
   margin-right: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-gap: 5px;
 }
 .fab {
@@ -197,4 +197,7 @@ hr {
 	0%   { opacity: 0; }
 	50%  { opacity: .5; }
 	100% { opacity: 1; }
+}
+.icon-scroll:hover{
+  cursor: pointer;
 }
