--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -3,7 +3,7 @@
   padding: 10px 10px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 3fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 5fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 10px;
 }
 .NavContainer {
@@ -13,7 +13,7 @@
   left: 0;
   position: -webkit-sticky; /* Safari & IE */
   top: 0;
-  z-index: 2;
+  z-index: 3;
   /* Firefox */
   -moz-transition: all 0.5s ease-in;
   /* WebKit */
@@ -34,6 +34,7 @@
 .NavBarAnchorContainer {
   display:flex;
   margin: 0 auto;
+
 }
 .white-titles {
   display: flex;
@@ -117,4 +118,10 @@ to   { opacity: 1; }
 }
 #logo{
   height:35px;
+}
+.NavBarAnchorContainer > .active {
+  border-bottom: 2px solid #191849;
+}
+.NavBarAnchorContainer:hover{
+  cursor: pointer;
 }
