--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,52 +1,52 @@
-.contact-content{
-    font-size: 20px;
-    text-align: center;
-    max-width: 1200px;
-    margin : 0 auto;
-    padding : 50px 100px;
+.contact-container {
+  margin: 0 auto;
+  width: 100%;
+  padding: 100px 50px;
+  text-align: center;
 }
-.contact-container{
-    margin: 0 auto;
-    width :100%;
+.contact-content {
+  margin: 0 auto;
+  font-size: 20px;
+  max-width: 1200px;
+  padding-top: 50px;
 }
-.Name-email-container{
-    text-align: left;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-    padding: 20px 0px;
-    max-height: 60px;
+.Name-email-container {
+  text-align: left;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  padding: 20px 0px;
+
 }
 
-.message-input-container{
-    height:200px;
-    width: 100%;
+.message-input-container {
+  height: 200px;
+  width: 100%;
 }
-.message-input{
-    border: 1px solid #ddd;
-    /* border-radius: 4px; */
-    height: 100%;
-    width: 100%;
-    padding: 5px;
-    font-size: 16px;
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-    box-sizing: border-box;
+.message-input {
+  border: 1px solid #ddd;
+  /* border-radius: 4px; */
+  height: 100%;
+  width: 100%;
+  padding: 5px;
+  font-size: 16px;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box; /* Firefox, other Gecko */
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 700px) {
-    .contact-content{
-        font-size: 20px;
-        text-align: center;
-        max-width: 1200px;
-        margin : 0 auto;
-        padding : 30px 30px;
-    }
+  .contact-content {
+    font-size: 20px;
+    text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 30px 30px;
   }
-  .smallBtn{
-      margin-top: 10px;
-      width:50%;
-      border: 1px solid #ddd;
-
-  }
+}
+.smallBtn {
+  margin-top: 10px;
+  width: 50%;
+  border: 1px solid #ddd;
+}
