--- a/src/components/Experience/Experience-list.css
+++ b/src/components/Experience/Experience-list.css
@@ -4,7 +4,7 @@
 .experience-container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 100px 30px 0px 30px;
+  padding: 100px 10px 0px;
 }
 .experience-content {
   padding-top: 50px;
