--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,8 +1,9 @@
 .contact-container {
   margin: 0 auto;
-  width: 100%;
-  padding: 100px 50px;
+  width: 100vw;
+  padding: 100px 0px;
   text-align: center;
+  height: 100vh;
 }
 .contact-content {
   margin: 0 auto;
@@ -21,7 +22,7 @@
 }
 
 .message-input-container {
-  height: 200px;
+  height: 500px;
   width: 100%;
 }
 .message-input {
