--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,8 @@
 body {
   margin: 0px;
   font-family: "Lato", sans-serif;
-  background-image: url(/media/Portfolio-background.jpg);
+  /* background-image: url(/media/Portfolio-background.jpg); */
+  background-image: url(/media/background.jpg);
   background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
