--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -1,5 +1,4 @@
 .top-menu {
-
   max-width: 1200px;
   padding: 10px 10px;
   margin: 0 auto;
@@ -14,7 +13,7 @@
 }
 .NavContainer {
   margin: 0 auto;
-  position: absolute;
+  position: fixed;
   width: 100%;
   top: 0;
   left: 0;
