fixed navbar not being fix

--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -34,7 +34,7 @@
   text-align: center;
   margin: 0 auto;
   white-space: nowrap;
-
+  position: relative;
 }
 .NavBarAnchorContainer {
   display: flex;
