--- a/src/components/Recommendation/Recommendation.css
+++ b/src/components/Recommendation/Recommendation.css
@@ -5,6 +5,8 @@
     max-height: 100px;
 }
 .recommendation-container{
+    border: 1px solid #0bceaf;
+    border-radius: 20px;
     padding: 20px;
     max-width: 300px;
     height: auto;    /* auto keyword */
