fixed burger menu that wont turn black

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -25,3 +25,11 @@
   fill: white;
   color: white;
 }
+.faBarsIconWhite {
+  fill: white;
+  color: white;
+}
+faBarsIconBlack {
+  fill: black;
+  color: black;
+}
