--- a/src/components/LandingLayout/InformationLayout/InformationLayout.css
+++ b/src/components/LandingLayout/InformationLayout/InformationLayout.css
@@ -97,7 +97,7 @@ hr {
   margin-left: auto;
   margin-right: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 5px;
 }
 .fab {
@@ -136,8 +136,6 @@ hr {
 
 
 .icon-scroll {
-  
-    
   bottom: 0px;
   left:50%;
   transform: translate(-50%,-50%);
