--- a/src/components/LandingLayout/InformationLayout/InformationLayout.css
+++ b/src/components/LandingLayout/InformationLayout/InformationLayout.css
@@ -1,5 +1,5 @@
-.container {
-  background-image: url(./background.jpg);
+.InformationLayout-container {
+  background-image: url(./jean-vella-AMUXeE7Y2Vc-unsplash.jpg);
   background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -12,13 +12,13 @@
   position: relative;
   height: 100vh;
 }
-.tintLayer1{
+.InformationLayout-tintLayer1{
   width:100%;
   height:100vh;
   background: rgba(0, 0, 0, 0.7);
   position: absolute;
 }
-.centeredContainer {
+.InformationLayout-centeredContainer {
   position: absolute;
   margin-left: auto;
   margin-right: auto;
@@ -27,18 +27,18 @@
   transform: translateY(-50%);
   top: 50%;
 }
-.title {
+.InformationLayout-title {
   font-size: 70px;
   color: white;
 }
-.description {
+.InformationLayout-description {
   color: white;
   font-size: 20px;
 }
-.fa-chevron-down {
+.InformationLayout-fa-chevron-down {
   color: white;
 }
-.bottomDiv {
+.InformationLayout-bottomDiv {
     position: absolute;
     height: 40px;
     width: 40px;
@@ -49,7 +49,7 @@
 }
 
 
-.bottomDiv .fas {
+.InformationLayout-bottomDiv .fas {
     font-size: 30px;
     position: absolute;
     top: 50%;
@@ -89,7 +89,7 @@ hr {
   border-width: 1px;
 }
 
-.socialContactsIcons {
+.InformationLayout-socialContactsIcons {
   width: 20%;
   display: block;
   margin-top: 0.5em;
@@ -105,7 +105,7 @@ hr {
   color: white;
 }
 
-.socialContactsIcons a .fab:hover{
+.InformationLayout-socialContactsIcons a .fab:hover{
   color: #191849;
 }
 @media screen and (max-width: 600px) {
@@ -124,18 +124,18 @@ hr {
   }
 }
 .overlay{
-    z-index: 1;
-    height: 100%;
-    width: 100%;
-    overflow: auto;
-    top: 0px;
-    left: 0px;
-    background: rgba(0, 0, 0, 0.7); /*can be anything, of course*/
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  top: 0px;
+  left: 0px;
+  background: rgba(0, 0, 0, 0.7); /*can be anything, of course*/
 
 }
 
 
-.icon-scroll {
+.InformationLayout-icon-scroll {
   bottom: 0px;
   left:50%;
   transform: translate(-50%,-50%);
@@ -212,4 +212,10 @@ hr {
 }
 .icon-scroll:hover{
   cursor: pointer;
+}
+.circle-avatar-profile{
+  border-radius: 50%;
+  border: 5px solid black;
+  max-width: 250px;
+  max-height: 250px;
 }
