--- a/src/components/Summary/Summary.css
+++ b/src/components/Summary/Summary.css
@@ -14,6 +14,7 @@
 .summary-description {
   color: #484848;
   text-align: justify;
+  margin: 0 auto;
   text-justify: inter-word;
 }
 .summary-title {
